# bsu-tool

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  jest.config.cjs  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: add-to-project.yml  branch-name.yml  ci.yml  deploy.yml  sync-labels.yml
bsu_tool/: __init__.py  __main__.py  example.py  status.py
docs/: team-members.txt
docs/architecture/: README.md  overview.md
docs/srs/: README.md
docs/user-guide/: README.md
src/: index.html  main.js  style.css
src/lib/: status.js
tests/: __init__.py  status.test.js  test_annotations.py  test_status.py
tests/unit/: __init__.py  test_annotations.py  test_pcap_reader.py  test_urb_decoder.py
