[project]
name = "bsu-tool"
version = "0.1.0"
description = "Behavioral Sleuth for USB — CLI tool and MCP server for USB protocol analysis"
requires-python = ">=3.11"
license = "MIT OR Apache-2.0"
dependencies = []

[tool.setuptools.packages.find]
include = ["bsu_tool*"]

[project.scripts]
bsu-tool = "bsu_tool.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=bsu_tool --cov-report=term-missing"

[tool.coverage.run]
source = ["bsu_tool"]
omit = ["bsu_tool/__main__.py"]

[tool.coverage.report]
show_missing = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
