[project]
name = "bsu-tool"
version = "0.1.0"
description = "Behavioral Sleuth for USB — CLI tool and MCP server for USB protocol analysis"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
dependencies = []

[project.scripts]
bsu-tool = "bsu_tool.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
